refactor: changed system name from 'entities' to 'units'

--- a/Assets/_Scripts/Units/DungeonDivers.Units.asmdef
+++ b/Assets/_Scripts/Units/DungeonDivers.Units.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "DungeonDivers.Entity",
-    "rootNamespace": "DungeonDivers.Entity",
+    "rootNamespace": "DungeonDivers.Units",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
